force-app/main/default/objects/MemberPlan__c/MemberPlan__c.object-meta.xml
<CustomObject>
    <description>Represents details about the insurance coverage for a member or subscriber.</description>
    <label>Mermber Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MemberPlan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>