force-app/main/default/objects/MemberPlan__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <inlineHelpText>An affiliation to a government service, such as the army or navy.</inlineHelpText>
    <label>Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>