force-app/main/default/objects/MemberPlan__c/fields/EffectiveTo__c.field-meta.xml
<CustomField>
    <fullName>EffectiveTo__c</fullName>
    <inlineHelpText>The date on which this member plan ceases to be effective.</inlineHelpText>
    <label>EffectiveTo</label>
    <required>true</required>
    <type>Date</type>
</CustomField>