force-app/main/default/objects/MemberPlan__c/fields/GroupNumber__c.field-meta.xml
<CustomField>
    <fullName>GroupNumber__c</fullName>
    <inlineHelpText>The group number or policy number of the primary member.</inlineHelpText>
    <label>GroupNumber</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>