force-app/main/default/objects/MemberPlan__c/fields/IssuerNumber__c.field-meta.xml
<CustomField>
    <fullName>IssuerNumber__c</fullName>
    <inlineHelpText>Reference number for the issuer of the plan.</inlineHelpText>
    <label>IssuerNumber</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>