force-app/main/default/objects/MemberPlan__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <inlineHelpText>The ID of the member’s record.</inlineHelpText>
    <label>MemberId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MemberPlanAccount</relationshipLabel>
    <relationshipName>MemberPlanAccount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>