force-app/main/default/objects/MemberPlan__c/fields/MemberNumber__c.field-meta.xml
<CustomField>
    <fullName>MemberNumber__c</fullName>
    <inlineHelpText>The member’s reference number for this plan.</inlineHelpText>
    <label>MemberNumber</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>