force-app/main/default/objects/MemberPlan__c/fields/PayerId__c.field-meta.xml
<CustomField>
    <fullName>PayerId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The ID of the payer’s Account object record.</inlineHelpText>
    <label>PayerId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PayerIdAccount</relationshipLabel>
    <relationshipName>PayerIdAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>