force-app/main/default/objects/MemberPlan__c/fields/PlanId__c.field-meta.xml
<CustomField>
    <fullName>PlanId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The ID of the payer’s Account object record.</inlineHelpText>
    <label>PlanId</label>
    <referenceTo>PurchaserPlan__c</referenceTo>
    <relationshipLabel>PurchaserPlanId</relationshipLabel>
    <relationshipName>PurchaserPlanId</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>