force-app/main/default/objects/MemberPlan__c/fields/PrimaryCarePhysician__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCarePhysician__c</fullName>
    <inlineHelpText>The name of the physician providing primary care under this plan.</inlineHelpText>
    <label>PrimaryCarePhysician</label>
    <length>32</length>
    <type>Text</type>
</CustomField>