force-app/main/default/objects/MemberPlan__c/fields/PrimarySecondaryTertiary__c.field-meta.xml
<CustomField>
    <fullName>PrimarySecondaryTertiary__c</fullName>
    <inlineHelpText>Whether this plan is the primary, secondary, or tertiary plan.</inlineHelpText>
    <label>PrimarySecondaryTertiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>