force-app/main/default/objects/MemberPlan__c/fields/RelationshipToSubscriber__c.field-meta.xml
<CustomField>
    <fullName>RelationshipToSubscriber__c</fullName>
    <inlineHelpText>The relationship of this member to the plan’s subscriber.</inlineHelpText>
    <label>RelationshipToSubscriber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>