force-app/main/default/objects/MemberPlan__c/fields/SubscriberId__c.field-meta.xml
<CustomField>
    <fullName>SubscriberId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The ID of the subscriber’s record.</inlineHelpText>
    <label>SubscriberId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SubscriberIdAccount</relationshipLabel>
    <relationshipName>SubscriberIdAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>