force-app/main/default/objects/MemberPlan__c/fields/VerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>VerificationStatus__c</fullName>
    <inlineHelpText>The status of the plan’s verification.</inlineHelpText>
    <label>VerificationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active - Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>